This is a fix for the lock wait timeout problem that was happening for large sets of orders and other high volume operations, and long-lived operations with lots of asynchronous service calls; this includes some diagnostic code to show the status of transactions in other threads when a lock wait timeout error is detected; the main fix here is a big cleanup of the concurrency handling in the JobManager and JobPoller objects, including the use of sleep instead of wait for more strict and consistent sync locking, and the use of different objects for locking different parts of that class since some are meant to be used by various other threads (like the queueNow and next methods) and others are only for the poller thread, like the run method; this also includes certain other small cleanups and improvements, like using FastList/FastMap more
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@600164 13f79535-47bb-0310-9956-ffa450edef68